--- a/tss_bike.html
+++ b/tss_bike.html
@@ -15,7 +15,8 @@
    -->
     <meta charset="utf-8" />
     <title>TSS Cycling Class</title>
-
+    <link rel="stylesheet" href="tss_layout.css" />
+    <link rel="stylesheet" href="tss_styles.css" />
 </head>
 
 <body>
