--- a/tss_bike.html
+++ b/tss_bike.html
@@ -27,7 +27,7 @@
     <nav>
         <ul>
             <li>
-                <a href="tss_home.html">Home</a>
+                <a href="index.html">Home</a>
             </li>
             <li>
                 <a href="tss_run.html">Running</a>
