--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     Tri and Succeed Sports
     Author: Evelyn Duarte
-    Date: 8/27/18  
+    Date: 8.27.18  
 
     Filename: index.html
    -->
