--- a/tss_run.html
+++ b/tss_run.html
@@ -9,7 +9,7 @@
     
     TSS Running Class
     Author: Evelyn Duarte
-    Date: 8/27/18  
+    Date: 8.27.18  
 
     Filename: tss_run.html
    -->
