--- a/tss_swim.html
+++ b/tss_swim.html
@@ -9,7 +9,7 @@
     
     TSS Swimming Class
    Author: Evelyn Duarte
-    Date: 8/27/18     
+    Date: 8.27.18     
 
     Filename: tss_swim.html
    -->
